--- a/SleepApneaDiagnoser/SleepApneaDiagnoser/SleepApneaDiagnoser.csproj
+++ b/SleepApneaDiagnoser/SleepApneaDiagnoser/SleepApneaDiagnoser.csproj
@@ -47,6 +47,7 @@
       <HintPath>..\packages\OxyPlot.Wpf.1.0.0\lib\net45\OxyPlot.Wpf.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="PresentationFramework.Aero" />
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
