--- a/SleepApneaDiagnoser/SleepApneaDiagnoser/SleepApneaDiagnoser.csproj
+++ b/SleepApneaDiagnoser/SleepApneaDiagnoser/SleepApneaDiagnoser.csproj
@@ -132,6 +132,12 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Resources\double_bed_set.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="double_bed_set.jpg" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
