--- a/SleepApneaDiagnoser/SleepApneaDiagnoser/packages.config
+++ b/SleepApneaDiagnoser/SleepApneaDiagnoser/packages.config
@@ -1,7 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="AForge" version="2.2.5" targetFramework="net452" />
+  <package id="AForge.Math" version="2.2.5" targetFramework="net452" />
+  <package id="DSP" version="1.0.0" targetFramework="net452" />
   <package id="Extended.Wpf.Toolkit" version="2.9" targetFramework="net452" />
   <package id="MahApps.Metro" version="1.3.0" targetFramework="net452" />
+  <package id="MathNet.Filtering" version="0.2.0-alpha" targetFramework="net452" />
+  <package id="MathNet.Numerics" version="3.0.2" targetFramework="net452" />
   <package id="OxyPlot.Core" version="1.0.0" targetFramework="net452" />
   <package id="OxyPlot.Wpf" version="1.0.0" targetFramework="net452" />
 </packages>
