--- a/SleepApneaDiagnoser/SleepApneaDiagnoser/SleepApneaDiagnoser.csproj
+++ b/SleepApneaDiagnoser/SleepApneaDiagnoser/SleepApneaDiagnoser.csproj
@@ -130,6 +130,10 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Page Include="Dialog_Add_Filter.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Page>
     <Page Include="Dialog_Add_Derivative.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -146,6 +150,10 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
+    <Page Include="Dialog_Remove_Filter.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Page>
     <Page Include="Dialog_Remove_Derivative.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -160,6 +168,9 @@
     </Compile>
     <Compile Include="Class_Utils.cs" />
     <Compile Include="Class_Models.cs" />
+    <Compile Include="Dialog_Add_Filter.xaml.cs">
+      <DependentUpon>Dialog_Add_Filter.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Dialog_Add_Derivative.xaml.cs">
       <DependentUpon>Dialog_Add_Derivative.xaml</DependentUpon>
     </Compile>
@@ -171,6 +182,9 @@
     </Compile>
     <Compile Include="Dialog_Manage_Categories.xaml.cs">
       <DependentUpon>Dialog_Manage_Categories.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Dialog_Remove_Filter.xaml.cs">
+      <DependentUpon>Dialog_Remove_Filter.xaml</DependentUpon>
     </Compile>
     <Compile Include="Dialog_Remove_Derivative.xaml.cs">
       <DependentUpon>Dialog_Remove_Derivative.xaml</DependentUpon>
