--- a/SleepApneaDiagnoser/SleepApneaDiagnoser/SleepApneaDiagnoser.csproj
+++ b/SleepApneaDiagnoser/SleepApneaDiagnoser/SleepApneaDiagnoser.csproj
@@ -44,6 +44,9 @@
     <Reference Include="EEGBandpowerNative">
       <HintPath>..\..\References\EEGBandpowerNative.dll</HintPath>
     </Reference>
+    <Reference Include="EEG_Spec">
+      <HintPath>..\..\References\EEG_Spec.dll</HintPath>
+    </Reference>
     <Reference Include="MahApps.Metro, Version=1.3.0.0, Culture=neutral, PublicKeyToken=f4fb5a3c4d1e5b4f, processorArchitecture=MSIL">
       <HintPath>..\packages\MahApps.Metro.1.3.0\lib\net45\MahApps.Metro.dll</HintPath>
       <Private>True</Private>
