Coherence on its own file

--- a/SleepApneaDiagnoser/SleepApneaDiagnoser/SleepApneaDiagnoser.csproj
+++ b/SleepApneaDiagnoser/SleepApneaDiagnoser/SleepApneaDiagnoser.csproj
@@ -169,6 +169,7 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="Class_Coherence.cs" />
     <Compile Include="Class_Respiratory.cs" />
     <Compile Include="Class_Utils.cs" />
     <Compile Include="Class_Models.cs" />
