--- a/SleepApneaDiagnoser/SleepApneaDiagnoser/SleepApneaDiagnoser.csproj
+++ b/SleepApneaDiagnoser/SleepApneaDiagnoser/SleepApneaDiagnoser.csproj
@@ -173,6 +173,7 @@
     <Compile Include="Class_CommonData.cs" />
     <Compile Include="Class_Preview.cs" />
     <Compile Include="Class_Analysis_Respiratory.cs" />
+    <Compile Include="Class_UtilsThirdParty.cs" />
     <Compile Include="Class_UserSettings.cs" />
     <Compile Include="Class_Utils.cs" />
     <Compile Include="Class_Analysis_EEG.cs" />
