Renamed Tool got rid of diagnoser

--- a/SleepApneaDiagnoser/SleepApneaDiagnoser/SleepApneaAnalysisTool.csproj
+++ b/SleepApneaDiagnoser/SleepApneaDiagnoser/SleepApneaAnalysisTool.csproj
@@ -7,8 +7,8 @@
     <ProjectGuid>{18A93FE0-035A-40CF-8991-59BCF2A85B00}</ProjectGuid>
     <OutputType>WinExe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>SleepApneaDiagnoser</RootNamespace>
-    <AssemblyName>SleepApneaDiagnoser</AssemblyName>
+    <RootNamespace>SleepApneaAnalysisTool</RootNamespace>
+    <AssemblyName>SleepApneaAnalysisTool</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{60dc8134-eba5-43b8-bcc9-bb4bc16c2548};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
@@ -26,7 +26,8 @@
     <UpdatePeriodically>false</UpdatePeriodically>
     <UpdateRequired>false</UpdateRequired>
     <MapFileExtensions>true</MapFileExtensions>
-    <ApplicationRevision>1</ApplicationRevision>
+    <AutorunEnabled>true</AutorunEnabled>
+    <ApplicationRevision>2</ApplicationRevision>
     <ApplicationVersion>1.0.0.%2a</ApplicationVersion>
     <UseApplicationTrust>false</UseApplicationTrust>
     <PublishWizardCompleted>true</PublishWizardCompleted>
@@ -256,7 +257,6 @@
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
     </None>
     <AppDesigner Include="Properties\" />
-    <None Include="SleepApneaDiagnoser_TemporaryKey.pfx" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
